@@ -1,3 +1,7 @@
+2007-05-25  Brian Bidulock  <bidulock@openss7.org>
+
+	* src/drivers/sctp2.c: final performance tweaks
+
 2007-05-24  Brian Bidulock  <bidulock@openss7.org>
 
 	* src/drivers/sctp2.c: nice stable performance test runs
